force-app/main/default/objects/Month__c/Month__c.object-meta.xml
<CustomObject>
    <description>Delivery Budgets and Forecasts by Account and Month</description>
    <label>Month Forecast</label>
    <nameField>
        <label>Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Month Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>