force-app/main/default/objects/Month__c/fields/Adh_to_Rev_Fcast__c.field-meta.xml
<CustomField>
    <fullName>Adh_to_Rev_Fcast__c</fullName>
    <formula>IF(Revised_Forecast__c == 0, 0, Total_Units_Rounded__c / Revised_Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adh to Rev Fcast %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>