force-app/main/default/objects/Month__c/fields/Adh_to_Rev_T_Fcast__c.field-meta.xml
<CustomField>
    <fullName>Adh_to_Rev_T_Fcast__c</fullName>
    <formula>IF(Revised_T_Forecast__c == 0, 0, Total_Tonnage_Rounded__c / Revised_T_Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adh to Rev T Fcast %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>