force-app/main/default/objects/Month__c/fields/Adh_to_T_Fcast__c.field-meta.xml
<CustomField>
    <fullName>Adh_to_T_Fcast__c</fullName>
    <formula>IF(Forecast_Tonnage__c == 0, 0, Total_Tonnage_Rounded__c /  Forecast_Tonnage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adh to T Fcast %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>