force-app/main/default/objects/Month__c/fields/Average_Weight_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Average_Weight_per_Unit__c</fullName>
    <formula>IF( Forecast__c = 0, 0, ABS(ROUND(1000 * Forecast_Tonnage__c / Forecast__c, 0)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Weight per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>