force-app/main/default/objects/Month__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <summarizedField>Forecast__c.Budget__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>