force-app/main/default/objects/Month__c/fields/Budget_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Budget_Rounded__c</fullName>
    <formula>ROUND(Budget__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Rounded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>