force-app/main/default/objects/Month__c/fields/Budget_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Budget_Tonnage__c</fullName>
    <label>T Budget</label>
    <summarizedField>Forecast__c.Budget_Tonnage__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>