force-app/main/default/objects/Month__c/fields/Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Month__c</fullName>
    <description>Month forecast applies too</description>
    <label>Calendar Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAN</fullName>
            </value>
            <value>
                <fullName>FEB</fullName>
            </value>
            <value>
                <fullName>MAR</fullName>
            </value>
            <value>
                <fullName>APR</fullName>
            </value>
            <value>
                <fullName>MAY</fullName>
            </value>
            <value>
                <fullName>JUN</fullName>
            </value>
            <value>
                <fullName>JUL</fullName>
            </value>
            <value>
                <fullName>AUG</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>OCT</fullName>
            </value>
            <value>
                <fullName>NOV</fullName>
            </value>
            <value>
                <fullName>DEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>