force-app/main/default/objects/Month__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to related customer account</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Months</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>