force-app/main/default/objects/Month__c/fields/Customer_A_c_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_A_c_Manager__c</fullName>
    <formula>Customer__r.Owner.FirstName &amp; &quot; &quot; &amp; Customer__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer A/c Manager</label>
    <type>Text</type>
</CustomField>