force-app/main/default/objects/Month__c/fields/Customer_A_c_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_A_c_No__c</fullName>
    <formula>Customer__r.Encirc_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer A/c No</label>
    <type>Text</type>
</CustomField>