force-app/main/default/objects/Month__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Formula provides a lookup to the Product Units Report for this Customer</description>
    <formula>HYPERLINK(
  &quot;/apex/ProductForecastUnits?CustomerNo=&quot;+Customer__r.Encirc_Account_Number__c,
  Customer__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>