force-app/main/default/objects/Month__c/fields/Customer_Name_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Tonnage__c</fullName>
    <formula>HYPERLINK(
  &quot;/apex/ProductForecastTonnage?CustomerNo=&quot;+Customer__r.Encirc_Account_Number__c,
  Customer__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>