force-app/main/default/objects/Month__c/fields/DTG__c.field-meta.xml
<CustomField>
    <fullName>DTG__c</fullName>
    <description>Distance To Go (to reach Forecast or Revised Forecast)</description>
    <formula>Revised_Forecast__c - Total_Units_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Distance To Go (to reach Forecast or Revised Forecast)</inlineHelpText>
    <label>DTG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>