force-app/main/default/objects/Month__c/fields/First_Monday_of_Year__c.field-meta.xml
<CustomField>
    <fullName>First_Monday_of_Year__c</fullName>
    <formula>DATE(VALUE(Year__c), 1, 1) + 
  CASE(MOD( DATE(VALUE(Year__c),1,1) - DATE(2000, 1, 3), 7), 
    1, -1,
    2, -2,
    3, -3,
    4, -4,
    5, -5,
    6, -6,
    0
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Monday of Year</label>
    <type>Date</type>
</CustomField>