force-app/main/default/objects/Month__c/fields/First_Week_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Week_of_Month__c</fullName>
    <description>First week of month (could be at end of previous month)</description>
    <formula>CEILING( (First_Monday_of_Month__c - First_Monday_of_Year__c + 1) / 7 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Week of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>