force-app/main/default/objects/Month__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <summarizedField>Forecast__c.Forecast__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>