force-app/main/default/objects/Month__c/fields/Forecast_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Tonnage__c</fullName>
    <label>T Forecast</label>
    <summarizedField>Forecast__c.Forecast_Tonnage__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>