force-app/main/default/objects/Month__c/fields/Forecast_Tonnage_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Tonnage_Rounded__c</fullName>
    <formula>ROUND(Forecast_Tonnage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Forecast Rounded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>