force-app/main/default/objects/Month__c/fields/Is_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Month__c</fullName>
    <description>Is the month of the year equal to yesterday&apos;s month of the year?</description>
    <formula>IF($Setup.Current_Month__c.Month__c &gt; 0,
  AND(
    VALUE(Month_Number__c) == $Setup.Current_Month__c.Month__c,
    VALUE(Year__c) == $Setup.Current_Month__c.Year__c
  ),
  AND(
    VALUE(Month_Number__c) == MONTH(TODAY() - 1),
    VALUE(Year__c) == YEAR(TODAY() -1)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Month?</label>
    <type>Checkbox</type>
</CustomField>