force-app/main/default/objects/Month__c/fields/Is_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Month__c</fullName>
    <description>Is the month of the year equal to the month before today&apos;s month?</description>
    <formula>IF($Setup.Current_Month__c.Last_Month__c &gt; 0,
  AND(
    VALUE(Month_Number__c) == $Setup.Current_Month__c.Last_Month__c,
    VALUE(Year__c) == $Setup.Current_Month__c.Year__c
  ),
  AND(
    VALUE(Month_Number__c) == IF(MONTH(TODAY()-1) &gt; 1, MONTH(TODAY()-1) - 1, 12),
    VALUE(Year__c) == IF(MONTH(TODAY()-1) &gt; 1, YEAR(TODAY()-1), YEAR(TODAY()-1) - 1)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last Month?</label>
    <type>Checkbox</type>
</CustomField>