force-app/main/default/objects/Month__c/fields/Last_Risk_Upside_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Risk_Upside_Date__c</fullName>
    <description>Last Risk/Upside Approved or Rejected Date</description>
    <inlineHelpText>Last Risk/Upside Approved or Rejected Date</inlineHelpText>
    <label>Last Risk/Upside Date</label>
    <summarizedField>Forecast_Risk_Upside__c.Approved_Rejected_Date__c</summarizedField>
    <summaryForeignKey>Forecast_Risk_Upside__c.Month__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>