force-app/main/default/objects/Month__c/fields/Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Month_Number__c</fullName>
    <formula>CASE(TEXT(Calendar_Month__c),
&apos;JAN&apos;,&apos;01&apos;,
&apos;FEB&apos;,&apos;02&apos;,
&apos;MAR&apos;,&apos;03&apos;,
&apos;APR&apos;,&apos;04&apos;,
&apos;MAY&apos;,&apos;05&apos;,
&apos;JUN&apos;,&apos;06&apos;,
&apos;JUL&apos;,&apos;07&apos;,
&apos;AUG&apos;,&apos;08&apos;,
&apos;SEP&apos;,&apos;09&apos;,
&apos;OCT&apos;,&apos;10&apos;,
&apos;NOV&apos;,&apos;11&apos;,
&apos;12&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Number</label>
    <type>Text</type>
</CustomField>