force-app/main/default/objects/Month__c/fields/Pending_Risk_Upside_Records__c.field-meta.xml
<CustomField>
    <fullName>Pending_Risk_Upside_Records__c</fullName>
    <description>Counts number of Pending and Approved Risk/Upsides</description>
    <label>Pending Risk/Upside Records</label>
    <summaryFilterItems>
        <field>Forecast_Risk_Upside__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval, Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Risk_Upside__c.Month__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>