force-app/main/default/objects/Month__c/fields/Prior_Month_Actual_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Actual_Tonnage__c</fullName>
    <label>Prior Month Actual Tonnage</label>
    <summarizedField>Forecast__c.Prior_Month_Actual_Tonnage__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>