force-app/main/default/objects/Month__c/fields/Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year__c</fullName>
    <label>Prior Year</label>
    <summarizedField>Forecast__c.Prior_Year__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>