force-app/main/default/objects/Month__c/fields/Revised_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Revised_Forecast__c</fullName>
    <description>Revised forecast taking into consideration total risks and opps</description>
    <formula>Revised_Forecast_Roll_Up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Forecast</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>