force-app/main/default/objects/Month__c/fields/Revised_Forecast_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Revised_Forecast_Roll_Up__c</fullName>
    <label>Revised Forecast Roll Up</label>
    <summarizedField>Forecast__c.Revised_Forecast__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>