force-app/main/default/objects/Month__c/fields/Revised_T_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Revised_T_Forecast__c</fullName>
    <formula>Revised_Forecast_Tonnage_Roll_Up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised T Forecast</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>