force-app/main/default/objects/Month__c/fields/Risk_Upside_Comments__c.field-meta.xml
<CustomField>
    <fullName>Risk_Upside_Comments__c</fullName>
    <description>Risks/Opportunities Comments for Approved Risks/Opportunities</description>
    <label>Risk/Upside Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>