force-app/main/default/objects/Month__c/fields/Risk_Upside_Comments_formula__c.field-meta.xml
<CustomField>
    <fullName>Risk_Upside_Comments_formula__c</fullName>
    <formula>Risk_Upside_Comments__c + BR() + &quot;::&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk/Upside Comments</label>
    <type>Text</type>
</CustomField>