force-app/main/default/objects/Month__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Approved Risks for this Customer and Month</description>
    <label>Risks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>