force-app/main/default/objects/Month__c/fields/Sales_Organization_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_Text__c</fullName>
    <formula>CASE(
 TEXT(Sales_Organization__c ),
 &quot;EN60&quot;,&quot;UK&quot;,
 &quot;VD30&quot;,&quot;Italy&quot;,
 &quot;VD10&quot;,&quot;Spain&quot;,
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Organization</label>
    <type>Text</type>
</CustomField>