force-app/main/default/objects/Month__c/fields/spacer__c.field-meta.xml
<CustomField>
    <fullName>spacer__c</fullName>
    <formula>&quot; &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>__</label>
    <type>Text</type>
</CustomField>