force-app/main/default/objects/Month__c/fields/T_Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>T_Prior_Year__c</fullName>
    <label>T Prior Year</label>
    <summarizedField>Forecast__c.T_Prior_Year__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>