force-app/main/default/objects/Month__c/fields/T_Var_to_Forecast__c.field-meta.xml
<CustomField>
    <fullName>T_Var_to_Forecast__c</fullName>
    <formula>Total_Tonnage_Rounded__c - Forecast_Tonnage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Var to Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>