force-app/main/default/objects/Month__c/fields/T_Year_Forecast__c.field-meta.xml
<CustomField>
    <fullName>T_Year_Forecast__c</fullName>
    <formula>Prior_Month_Actual_Tonnage__c +  Revised_T_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Year Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>