force-app/main/default/objects/Month__c/fields/T_Year_Prior_Yr__c.field-meta.xml
<CustomField>
    <fullName>T_Year_Prior_Yr__c</fullName>
    <label>T Year Prior Yr</label>
    <summarizedField>Forecast__c.T_Year_Prior_Yr__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>