force-app/main/default/objects/Month__c/fields/T_Year_Total__c.field-meta.xml
<CustomField>
    <fullName>T_Year_Total__c</fullName>
    <formula>Prior_Month_Actual_Tonnage__c +  Total_Tonnage_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Year Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>