force-app/main/default/objects/Month__c/fields/Tonnage_Fields_0__c.field-meta.xml
<CustomField>
    <fullName>Tonnage_Fields_0__c</fullName>
    <formula>Budget_Tonnage__c + Forecast_Tonnage__c + Revised_T_Forecast__c + Total_Tonnage_Rounded__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tonnage Fields = 0</label>
    <type>Checkbox</type>
</CustomField>