force-app/main/default/objects/Month__c/fields/Top_Tonnage_Customer__c.field-meta.xml
<CustomField>
    <fullName>Top_Tonnage_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by Month Forecast Trigger - indicates top customer this month by Revised Tonnage Forecast</description>
    <label>Top Tonnage Customer</label>
    <type>Checkbox</type>
</CustomField>