force-app/main/default/objects/Month__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>Utilised for the daily load process</description>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>