force-app/main/default/objects/Month__c/fields/Unit_Fields_0__c.field-meta.xml
<CustomField>
    <fullName>Unit_Fields_0__c</fullName>
    <formula>Budget__c + Forecast__c + Revised_Forecast__c +  Total_Units_Rounded__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Fields = 0</label>
    <type>Checkbox</type>
</CustomField>