force-app/main/default/objects/Month__c/fields/Upside_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Upside_Tonnage__c</fullName>
    <formula>ROUND( Upsides__c * Average_Weight_per_Unit__c /1000, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upside Tonnage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>