force-app/main/default/objects/Month__c/fields/Var_to_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Var_to_Forecast__c</fullName>
    <formula>Total_Units_Rounded__c -  Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Var to Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>