force-app/main/default/objects/Month__c/fields/Week_2_Tonnage_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Week_2_Tonnage_Rounded__c</fullName>
    <label>T Week 2</label>
    <summarizedField>Forecast__c.Week_2_Tonnage_Rounded__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>