force-app/main/default/objects/Month__c/fields/Week_3_Units_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Week_3_Units_Rounded__c</fullName>
    <label>Week 3</label>
    <summarizedField>Forecast__c.Week_3_Units_Rounded__c</summarizedField>
    <summaryForeignKey>Forecast__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>