force-app/main/default/objects/Month__c/fields/Year_and_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_and_Month__c</fullName>
    <formula>Year__c &amp; &quot;-&quot; &amp; Month_Number__c &amp; &quot; &quot; &amp; TEXT(Calendar_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year and Month</label>
    <type>Text</type>
</CustomField>