force-app/main/default/objects/Month__c/fields/Year_Total__c.field-meta.xml
<CustomField>
    <fullName>Year_Total__c</fullName>
    <formula>Prior_Month_Actual_Total__c +  Total_Units_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>