force-app/main/default/objects/Month__c/validationRules/Year_must_be_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_must_be_numeric</fullName>
    <active>true</active>
    <description>Year must be numeric</description>
    <errorConditionFormula>OR(
  NOT(ISNUMBER( Year__c )),
  LEN( Year__c ) &lt; 4 
)</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>The Year must be 4 digits</errorMessage>
</ValidationRule>